--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
-    <script src="js/chatroom.js"></script>
+    <script src="/js/chatroom.js"></script>
 </body>
 </html>
